fix choix de l'image de srcset et delete loading lazy de l'img de profile

--- a/index.html
+++ b/index.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
-<html lang="fr">	
+<html lang="fr">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Nina Carducci photographe professionnel</title>
-	<meta name="description" content="Découvrez l'univers captivant de Nina Carducci, photographe professionnel passionné basée à Bordeaux, France. Avec créativité et technique, je saisis des moments uniques, des émotions et des situations pour les rendre immortels. Explorez mes photographies pour trouver de l'amour, du bonheur et de la tendresse à chaque regard. Contactez-moi pour des services de photographie professionnelle à Bordeaux et ses environs.">
-	
+	<meta name="description"
+		content="Découvrez l'univers captivant de Nina Carducci, photographe professionnel passionné basée à Bordeaux, France. Avec créativité et technique, je saisis des moments uniques, des émotions et des situations pour les rendre immortels. Explorez mes photographies pour trouver de l'amour, du bonheur et de la tendresse à chaque regard. Contactez-moi pour des services de photographie professionnelle à Bordeaux et ses environs.">
+
 	<!-- Open Graph / Facebook -->
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://ninacarducci.github.io/">
 	<meta property="og:title" content="Nina Carducci photographe professionnel">
 	<meta property="og:description"
-	content="Découvrez l'univers captivant de Nina Carducci, photographe professionnel passionné basée à Bordeaux, France.">
+		content="Découvrez l'univers captivant de Nina Carducci, photographe professionnel passionné basée à Bordeaux, France.">
 	<meta property="og:image" content="https://ninacarducci.github.io/assets/images/nina.png">
 
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image">
 	<meta property="twitter:url" content="https://ninacarducci.github.io/">
 	<meta property="twitter:title" content="Nina Carducci photographe professionnel">
-	<meta property="twitter:description" content="Découvrez l'univers captivant de Nina Carducci, photographe professionnel passionné basée à Bordeaux, France.">
+	<meta property="twitter:description"
+		content="Découvrez l'univers captivant de Nina Carducci, photographe professionnel passionné basée à Bordeaux, France.">
 	<meta property="twitter:image" content="https://ninacarducci.github.io/assets/images/nina.png">
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
+	<link
+		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
+		rel="stylesheet">
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.clean.css">
 	<link rel="stylesheet" href="./assets/style.min.css">
 
@@ -64,6 +69,7 @@
         }
     </script>
 </head>
+
 <body>
 	<header class="top-header">
 		<h1 class="name">Nina Carducci</h1>
@@ -73,8 +79,9 @@
 				<li><a href="#gallery">Galerie</a></li>
 				<li><a href="#services">Service</a></li>
 				<li><a href="#contact">Contact</a></li>
-				<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr"
-						target="_blank"><img src="assets/imgs/instagram.png" alt="picture logo instagram"></a></li>
+				<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank">
+					<img src="assets/imgs/instagram.png" alt="picture logo instagram">
+				</a></li>
 			</ul>
 		</div>
 	</header>
@@ -82,8 +89,8 @@
 		<section id="header">
 			<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
 				<div class="carousel-indicators">
-					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-						aria-current="true" aria-label="Slide 1"></button>
+					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+						class="active" aria-current="true" aria-label="Slide 1"></button>
 					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
 						aria-label="Slide 2"></button>
 					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
@@ -96,7 +103,8 @@
 								srcset="./assets/imgs/slider/slider-ryoji-iwata-desktop.webp" type="image/webp">
 							<source media="(min-width: 500px)"
 								srcset="./assets/imgs/slider/slider-ryoji-iwata-tablette.webp" type="image/webp">
-							<img src="./assets/imgs/slider/slider-ryoji-iwata-mobile.webp" class="d-block w-100" alt="A man walking">
+							<img src="./assets/imgs/slider/slider-ryoji-iwata-mobile.webp" class="d-block w-100"
+								alt="A man walking">
 						</picture>
 					</div>
 					<div class="carousel-item">
@@ -106,7 +114,7 @@
 							<source media="(min-width: 500px)"
 								srcset="./assets/imgs/slider/slider-nicholas-green-tablette.webp" type="image/webp">
 							<img srcset="./assets/imgs/slider/slider-nicholas-green-mobile.webp" class="d-block w-100"
-							alt="Happy fan">
+								alt="Happy fan">
 						</picture>
 					</div>
 					<div class="carousel-item">
@@ -116,7 +124,7 @@
 							<source media="(min-width: 500px)"
 								srcset="./assets/imgs/slider/slider-edward-cisneros-tablette.webp" type="image/webp">
 							<img srcset="./assets/imgs/slider/slider-edward-cisneros-mobile.webp" class="d-block w-100"
-							alt="The groom kissing the bride">
+								alt="The groom kissing the bride">
 						</picture>
 					</div>
 				</div>
@@ -135,15 +143,24 @@
 		<section id="about">
 			<div class="picture left">
 				<img srcset="
-				./assets/imgs/nina-mobile.webp 500w,
-				./assets/imgs/nina-tablette.webp 1024w,
-				./assets/imgs/nina-desktop.webp 1920w
-			" sizes="(min-width: 1024px) 1920px, (min-width: 500px) 1024px, 500px" src="./assets/imgs/nina-mobile.webp" loading="lazy" alt="profil picture of Nina Carducci"/>
+					./assets/imgs/nina-mobile.webp 500w,
+					./assets/imgs/nina-tablette.webp 1024w,
+					./assets/imgs/nina-desktop.webp 1920w" 
+					sizes="(min-width: 1024px) 1920px, (min-width: 500px) 1024px, 320px" src="./assets/imgs/nina-mobile.webp"
+					alt="picture of Nina Carducci" 
+				/>
 			</div>
 			<div id="about-me">
 				<h2 class="about-me__title">A propos de moi</h2>
-				<p class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.</>
-				<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos yeux, ou le partager au plus grand nombre. C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon approche, ma technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de la tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
+				<p class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais
+					prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre
+					immortels, voilà ce qui me fait vibrer.</>
+				<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie :
+					le figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos
+					yeux, ou le partager au plus grand nombre. C’est ce que je vous propose : saisir ces merveilleux
+					moments au travers de mon regard, mon approche, ma technique. Rendre ces moments immortels, afin que
+					vous puissiez y puiser de l’amour, du bonheur, de la tendresse et de lumière à chaque fois que vous
+					poserez les yeux sur vos photos.</p>
 			</div>
 		</section>
 		<section id="gallery">
@@ -154,62 +171,74 @@
 					./assets/imgs/gallery/concerts/concert-aaron-paul-mobile.webp 500w,
 					./assets/imgs/gallery/concerts/concert-aaron-paul-tablette.webp 1024w,
 					./assets/imgs/gallery/concerts/concert-aaron-paul-desktop.webp 1920w
-				" sizes="(min-width: 1024px) 1920px, (min-width: 500px) 1024px, 500px"
-						src="./assets/imgs/gallery/concerts/concert-aaron-paul-mobile.webp" loading="lazy" alt="Concert photo Aaron Paul"/>
+				" sizes="(min-width: 1024px) 1920px, (min-width: 500px) 1024px, 320px"
+						src="./assets/imgs/gallery/concerts/concert-aaron-paul-mobile.webp" loading="lazy"
+						alt="Concert photo Aaron Paul" />
 					<img data-gallery-tag="Entreprises" class="gallery-item" srcset="
 					./assets/imgs/gallery/entreprise/entreprise-ali-morshedlou-mobile.webp 500w,
 					./assets/imgs/gallery/entreprise/entreprise-ali-morshedlou-tablette.webp 1024w,
 					./assets/imgs/gallery/entreprise/entreprise-ali-morshedlou-desktop.webp 1920w
-				" sizes="(min-width: 1024px) 1920px, (min-width: 500px) 1024px, 500px"
-						src="./assets/imgs/gallery/entreprise/entreprise-ali-morshedlou-mobile.webp" loading="lazy" alt="Business photo Ali Morshedlou"/>
+				" sizes="(min-width: 1024px) 1920px, (min-width: 500px) 1024px, 320px"
+						src="./assets/imgs/gallery/entreprise/entreprise-ali-morshedlou-mobile.webp" loading="lazy"
+						alt="Business photo Ali Morshedlou" />
 					<img data-gallery-tag="Entreprises" class="gallery-item" srcset="
 					./assets/imgs/gallery/entreprise/entreprise-jason-goodman-mobile.webp 500w,
 					./assets/imgs/gallery/entreprise/entreprise-jason-goodman-tablette.webp 1024w,
 					./assets/imgs/gallery/entreprise/entreprise-jason-goodman-desktop.webp 1920w
-				" sizes="(min-width: 1024px) 1920px, (min-width: 500px) 1024px, 500px"
-						src="./assets/imgs/gallery/entreprise/entreprise-jason-goodman-mobile.webp" loading="lazy" alt="Business photo Jason Goodman"/>
+				" sizes="(min-width: 1024px) 1920px, (min-width: 500px) 1024px, 320px"
+						src="./assets/imgs/gallery/entreprise/entreprise-jason-goodman-mobile.webp" loading="lazy"
+						alt="Business photo Jason Goodman" />
 					<img data-gallery-tag="Mariages" class="gallery-item" srcset="
 					./assets/imgs/gallery/mariage/mariage-hannah-busing-mobile.webp 500w,
 					./assets/imgs/gallery/mariage/mariage-hannah-busing-tablette.webp 1024w,
 					./assets/imgs/gallery/mariage/mariage-hannah-busing-desktop.webp 1920w
-				" sizes="(min-width: 1024px) 1920px, (min-width: 500px) 1024px, 500px"
-						src="./assets/imgs/gallery/mariage/mariage-hannah-busing-mobile.webp" loading="lazy" alt="Wedding photo Hannah Busing"/>
+				" sizes="(min-width: 1024px) 1920px, (min-width: 500px) 1024px, 320px"
+						src="./assets/imgs/gallery/mariage/mariage-hannah-busing-mobile.webp" loading="lazy"
+						alt="Wedding photo Hannah Busing" />
 					<img data-gallery-tag="Portrait" class="gallery-item" srcset="
 					./assets/imgs/gallery/portraits/portraits-ade-tunji-mobile.webp 500w,
 					./assets/imgs/gallery/portraits/portraits-ade-tunji-tablette.webp 1024w,
 					./assets/imgs/gallery/portraits/portraits-ade-tunji-desktop.webp 1920w
-				" sizes="(min-width: 1024px) 1920px, (min-width: 500px) 1024px, 500px"
-						src="./assets/imgs/gallery/portraits/portraits-ade-tunji-mobile.webp" loading="lazy" alt="Portrait photo Ade Tunji"/>
+				" sizes="(min-width: 1024px) 1920px, (min-width: 500px) 1024px, 320px"
+						src="./assets/imgs/gallery/portraits/portraits-ade-tunji-mobile.webp" loading="lazy"
+						alt="Portrait photo Ade Tunji" />
 					<img data-gallery-tag="Mariages" class="gallery-item" srcset="
 					./assets/imgs/gallery/mariage/mariage-jakob-owens-mobile.webp 500w,
 					./assets/imgs/gallery/mariage/mariage-jakob-owens-tablette.webp 1024w,
 					./assets/imgs/gallery/mariage/mariage-jakob-owens-desktop.webp 1920w
-				" sizes="(min-width: 1024px) 1920px, (min-width: 500px) 1024px, 500px"
-						src="./assets/imgs/gallery/mariage/mariage-jakob-owens-mobile.webp" loading="lazy" alt="Wedding photo Jakob Owens"/>
+				" sizes="(min-width: 1024px) 1920px, (min-width: 500px) 1024px, 320px"
+						src="./assets/imgs/gallery/mariage/mariage-jakob-owens-mobile.webp" loading="lazy"
+						alt="Wedding photo Jakob Owens" />
 					<img data-gallery-tag="Portrait" class="gallery-item" srcset="
 					./assets/imgs/gallery/portraits/portraits-nino-van-prattenburg-mobile.webp 500w,
 					./assets/imgs/gallery/portraits/portraits-nino-van-prattenburg-tablette.webp 1024w,
 					./assets/imgs/gallery/portraits/portraits-nino-van-prattenburg-desktop.webp 1920w
-				" sizes="(min-width: 1024px) 1920px, (min-width: 500px) 1024px, 500px"
-						src="./assets/imgs/gallery/portraits/portraits-nino-van-prattenburg-mobile.webp" loading="lazy" alt="Portrait photo Nino Van Prattenburg"/>
+				" sizes="(min-width: 1024px) 1920px, (min-width: 500px) 1024px, 320px"
+						src="./assets/imgs/gallery/portraits/portraits-nino-van-prattenburg-mobile.webp" loading="lazy"
+						alt="Portrait photo Nino Van Prattenburg" />
 					<img data-gallery-tag="Concert" class="gallery-item" srcset="
 					./assets/imgs/gallery/concerts/concert-austin-neill-mobile.webp 500w,
 					./assets/imgs/gallery/concerts/concert-austin-neill-tablette.webp 1024w,
 					./assets/imgs/gallery/concerts/concert-austin-neill-desktop.webp 1920w
-				" sizes="(min-width: 1024px) 1920px, (min-width: 500px) 1024px, 500px"
-						src="./assets/imgs/gallery/concerts/concert-austin-neill-mobile.webp" loading="lazy" alt="Concert photo Austin Neill"/>
+				" sizes="(min-width: 1024px) 1920px, (min-width: 500px) 1024px, 320px"
+						src="./assets/imgs/gallery/concerts/concert-austin-neill-mobile.webp" loading="lazy"
+						alt="Concert photo Austin Neill" />
 					<img data-gallery-tag="Entreprises" class="gallery-item" srcset="
 					./assets/imgs/gallery/entreprise/entreprise-mateus-campos-felipe-mobile.webp 500w,
 					./assets/imgs/gallery/entreprise/entreprise-mateus-campos-felipe-tablette.webp 1024w,
 					./assets/imgs/gallery/entreprise/entreprise-mateus-campos-felipe-desktop.webp 1920w
-				" sizes="(min-width: 1024px) 1920px, (min-width: 500px) 1024px, 500px"
-						src="./assets/imgs/gallery/entreprise/entreprise-mateus-campos-felipe-mobile.webp" loading="lazy" alt="Business photo Mateus Campos Felipe"/>
+				" sizes="(min-width: 1024px) 1920px, (min-width: 500px) 1024px, 320px"
+						src="./assets/imgs/gallery/entreprise/entreprise-mateus-campos-felipe-mobile.webp"
+						loading="lazy" alt="Business photo Mateus Campos Felipe" />
 				</div>
 			</div>
 			<div class="quote">
 				<figure>
 					<blockquote>
-						<h3 class="quote__text">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un fait est traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude n’existe pas en photographie. Toutes les photos sont exactes. Aucune d’elles n’est la vérité.</h3>
+						<h3 class="quote__text">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un
+							fait est traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude
+							n’existe pas en photographie. Toutes les photos sont exactes. Aucune d’elles n’est la
+							vérité.</h3>
 					</blockquote>
 					<figcaption class="quote__author">- Richard Avedon</figcaption>
 				</figure>
@@ -221,7 +250,8 @@
 				<article class="service">
 					<div class="service__description">
 						<h3>Shooting photo</h3>
-						<p>Pour capturer vos moments les plus précieux et garder un souvenir impérissable. Je me déplace en Île-de-France pour réaliser vos photos</p>
+						<p>Pour capturer vos moments les plus précieux et garder un souvenir impérissable. Je me déplace
+							en Île-de-France pour réaliser vos photos</p>
 					</div>
 					<div class="service__price">
 						<h4>350€/demi journée</h4>
@@ -231,7 +261,8 @@
 				<article class="service">
 					<div class="service__description">
 						<h3>Retouches</h3>
-						<p>Vous souhaitez retoucher vos photos pour un résultat professionnel ? Bénéficier d’un rendu optimal pour vos publications</p>
+						<p>Vous souhaitez retoucher vos photos pour un résultat professionnel ? Bénéficier d’un rendu
+							optimal pour vos publications</p>
 					</div>
 					<div class="service__price">
 						<h4>50€/photo</h4>
@@ -241,7 +272,8 @@
 				<article class="service">
 					<div class="service__description">
 						<h3>Album photos</h3>
-						<p>Partagez avec vos proches et vos clients les photos des moments partagés ensemble à travers un album photo personnalisé</p>
+						<p>Partagez avec vos proches et vos clients les photos des moments partagés ensemble à travers
+							un album photo personnalisé</p>
 					</div>
 					<div class="service__price">
 						<h4>400€ album A4</h4>
@@ -253,7 +285,8 @@
 		<section class="quote">
 			<figure>
 				<blockquote>
-					<h3 class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</h3>
+					<h3 class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des
+						traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</h3>
 				</blockquote>
 				<figcaption class="quote__author">- Richard Avedon</figcaption>
 			</figure>
@@ -278,14 +311,17 @@
 					./assets/imgs/camera-mobile.webp 500w,
 					./assets/imgs/camera-tablette.webp 1024w,
 					./assets/imgs/camera-desktop.webp 1920w
-				" sizes="(min-width: 1024px) 1920px, (min-width: 500px) 1024px, 500px" src="./assets/imgs/camera-mobile.webp"  loading="lazy" alt="picture of a camera"/>
+				" sizes="(min-width: 1024px) 1920px, (min-width: 500px) 1024px, 500px" src="./assets/imgs/camera-mobile.webp"
+						loading="lazy" alt="picture of a camera" />
 				</div>
 			</div>
 		</section>
 	</main>
-	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
+		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<script src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
 	<script src="./assets/maugallery.min.js"></script>
 	<script src="./assets/scripts.min.js"></script>
 </body>
+
 </html>
