--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 				<li><a href="#services">Service</a></li>
 				<li><a href="#contact">Contact</a></li>
 				<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank">
-					<img src="assets/imgs/instagram.png" alt="picture logo instagram">
+					<img src="assets/imgs/instagram.png" alt="picture logo instagram" width="20px" height="20px">
 				</a></li>
 			</ul>
 		</div>
@@ -103,8 +103,8 @@
 								srcset="./assets/imgs/slider/slider-ryoji-iwata-desktop.webp" type="image/webp">
 							<source media="(min-width: 500px)"
 								srcset="./assets/imgs/slider/slider-ryoji-iwata-tablette.webp" type="image/webp">
-							<img src="./assets/imgs/slider/slider-ryoji-iwata-mobile.webp" class="d-block w-100"
-								alt="A man walking">
+							<img srcset="./assets/imgs/slider/slider-ryoji-iwata-mobile.webp" class="d-block w-100"
+								alt="A man walking" width="auto" height="auto">
 						</picture>
 					</div>
 					<div class="carousel-item">
@@ -114,7 +114,7 @@
 							<source media="(min-width: 500px)"
 								srcset="./assets/imgs/slider/slider-nicholas-green-tablette.webp" type="image/webp">
 							<img srcset="./assets/imgs/slider/slider-nicholas-green-mobile.webp" class="d-block w-100"
-								alt="Happy fan">
+								alt="Happy fan" width="auto" height="auto">
 						</picture>
 					</div>
 					<div class="carousel-item">
@@ -124,7 +124,7 @@
 							<source media="(min-width: 500px)"
 								srcset="./assets/imgs/slider/slider-edward-cisneros-tablette.webp" type="image/webp">
 							<img srcset="./assets/imgs/slider/slider-edward-cisneros-mobile.webp" class="d-block w-100"
-								alt="The groom kissing the bride">
+								alt="The groom kissing the bride" width="auto" height="auto">
 						</picture>
 					</div>
 				</div>
@@ -147,14 +147,14 @@
 					./assets/imgs/nina-tablette.webp 1024w,
 					./assets/imgs/nina-desktop.webp 1920w" 
 					sizes="(min-width: 1024px) 1920px, (min-width: 500px) 1024px, 320px" src="./assets/imgs/nina-mobile.webp"
-					alt="picture of Nina Carducci" 
+					alt="picture of Nina Carducci"  width="320px" height="100%"
 				/>
 			</div>
 			<div id="about-me">
 				<h2 class="about-me__title">A propos de moi</h2>
 				<p class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais
 					prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre
-					immortels, voilà ce qui me fait vibrer.</>
+					immortels, voilà ce qui me fait vibrer.</p>
 				<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie :
 					le figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos
 					yeux, ou le partager au plus grand nombre. C’est ce que je vous propose : saisir ces merveilleux
@@ -312,7 +312,7 @@
 					./assets/imgs/camera-tablette.webp 1024w,
 					./assets/imgs/camera-desktop.webp 1920w
 				" sizes="(min-width: 1024px) 1920px, (min-width: 500px) 1024px, 500px" src="./assets/imgs/camera-mobile.webp"
-						loading="lazy" alt="picture of a camera" />
+						loading="lazy" alt="picture of a camera" width="320px" height="100%"/>
 				</div>
 			</div>
 		</section>
