Mise à jour de l'adresse et de la hauteur de la section d'en-tête et de la section À propos

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 "streetAddress": "68 avenue Alsace-Lorraine",
                 "addressLocality": "Bordeaux",
                 "postalCode": "33200",
-                "addressCountry": "France"
+                "addressCountry": "FR"
             },
 			"openingHoursSpecification": [
             	{
@@ -86,7 +86,7 @@
 		</div>
 	</header>
 	<main>
-		<section id="header">
+		<section id="header" style="height: 100px;">
 			<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
 				<div class="carousel-indicators">
 					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
@@ -140,7 +140,7 @@
 				</button>
 			</div>
 		</section>
-		<section id="about">
+		<section id="about" style="height: 676px;">
 			<div class="picture left">
 				<img srcset="
 					./assets/imgs/nina-mobile.webp 500w,
@@ -323,5 +323,4 @@
 	<script src="./assets/maugallery.min.js"></script>
 	<script src="./assets/scripts.min.js"></script>
 </body>
-
 </html>
