Mise à jour de la section "about" avec une hauteur ajustée.

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 				</button>
 			</div>
 		</section>
-		<section id="about">
+		<section id="about" style="height: fit-content;">
 			<div class="picture left">
 				<img srcset="
 					./assets/imgs/nina-mobile.webp 500w,
