Mise à jour de la section "about" avec une hauteur minimale de 600px et une modification de l'attribut "min-width" de l'image

--- a/index.html
+++ b/index.html
@@ -140,14 +140,14 @@
 				</button>
 			</div>
 		</section>
-		<section id="about" style="height: fit-content;">
+		<section id="about" style="min-height: 600px;">
 			<div class="picture left">
 				<img srcset="
 					./assets/imgs/nina-mobile.webp 500w,
 					./assets/imgs/nina-tablette.webp 1024w,
 					./assets/imgs/nina-desktop.webp 1920w" 
 					sizes="(min-width: 1024px) 500px, (min-width: 500px) 390px, 250px" src="./assets/imgs/nina-mobile.webp"
-					alt="picture of Nina Carducci"  width="250px" height="100%"
+					alt="picture of Nina Carducci"  min-width="250px" height="auto"
 				/>
 			</div>
 			<div id="about-me">
