Corriger les attributs de taille des images dans index.html

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 					./assets/imgs/nina-tablette.webp 1024w,
 					./assets/imgs/nina-desktop.webp 1920w" 
 					sizes="(min-width: 1024px) 500px, (min-width: 500px) 390px, 250px" src="./assets/imgs/nina-mobile.webp"
-					alt="picture of Nina Carducci"  min-width="250px" height="auto"
+					alt="picture of Nina Carducci" min-width="250px" height="auto"
 				/>
 			</div>
 			<div id="about-me">
@@ -171,65 +171,65 @@
 					./assets/imgs/gallery/concerts/concert-aaron-paul-mobile.webp 500w,
 					./assets/imgs/gallery/concerts/concert-aaron-paul-tablette.webp 1024w,
 					./assets/imgs/gallery/concerts/concert-aaron-paul-desktop.webp 1920w
-				" sizes="(min-width: 1024px) 440px, (min-width: 500px) 1024px, 320px"
+				" sizes="(min-width: 1024px) 1920px, (min-width: 500px) 1024px, 320px"
 						src="./assets/imgs/gallery/concerts/concert-aaron-paul-mobile.webp" loading="lazy"
-						alt="Concert photo Aaron Paul" width="100%" height="auto"/>
+						alt="Concert photo Aaron Paul" width="auto" height="auto"/>
 					<img data-gallery-tag="Entreprises" class="gallery-item" srcset="
 					./assets/imgs/gallery/entreprise/entreprise-ali-morshedlou-mobile.webp 500w,
 					./assets/imgs/gallery/entreprise/entreprise-ali-morshedlou-tablette.webp 1024w,
 					./assets/imgs/gallery/entreprise/entreprise-ali-morshedlou-desktop.webp 1920w
-				" sizes="(min-width: 1024px) 440px, (min-width: 500px) 1024px, 320px"
+				" sizes="(min-width: 1024px) 1920px, (min-width: 500px) 1024px, 320px"
 						src="./assets/imgs/gallery/entreprise/entreprise-ali-morshedlou-mobile.webp" loading="lazy"
-						alt="Business photo Ali Morshedlou" width="100%" height="auto"/>
+						alt="Business photo Ali Morshedlou" width="440px" height="auto"/>
 					<img data-gallery-tag="Entreprises" class="gallery-item" srcset="
 					./assets/imgs/gallery/entreprise/entreprise-jason-goodman-mobile.webp 500w,
 					./assets/imgs/gallery/entreprise/entreprise-jason-goodman-tablette.webp 1024w,
 					./assets/imgs/gallery/entreprise/entreprise-jason-goodman-desktop.webp 1920w
-				" sizes="(min-width: 1024px) 440px, (min-width: 500px) 1024px, 320px"
+				" sizes="(min-width: 1024px) 1920px, (min-width: 500px) 1024px, 320px"
 						src="./assets/imgs/gallery/entreprise/entreprise-jason-goodman-mobile.webp" loading="lazy"
-						alt="Business photo Jason Goodman" width="100%" height="auto"/>
+						alt="Business photo Jason Goodman" width="440px" height="auto"/>
 					<img data-gallery-tag="Mariages" class="gallery-item" srcset="
 					./assets/imgs/gallery/mariage/mariage-hannah-busing-mobile.webp 500w,
 					./assets/imgs/gallery/mariage/mariage-hannah-busing-tablette.webp 1024w,
 					./assets/imgs/gallery/mariage/mariage-hannah-busing-desktop.webp 1920w
-				" sizes="(min-width: 1024px) 440px, (min-width: 500px) 1024px, 320px"
+				" sizes="(min-width: 1024px) 1920px, (min-width: 500px) 1024px, 320px"
 						src="./assets/imgs/gallery/mariage/mariage-hannah-busing-mobile.webp" loading="lazy"
-						alt="Wedding photo Hannah Busing" width="100%" height="auto"/>
+						alt="Wedding photo Hannah Busing" width="auto" height="auto"/>
 					<img data-gallery-tag="Portrait" class="gallery-item" srcset="
 					./assets/imgs/gallery/portraits/portraits-ade-tunji-mobile.webp 500w,
 					./assets/imgs/gallery/portraits/portraits-ade-tunji-tablette.webp 1024w,
 					./assets/imgs/gallery/portraits/portraits-ade-tunji-desktop.webp 1920w
-				" sizes="(min-width: 1024px) 440px, (min-width: 500px) 1024px, 320px"
+				" sizes="(min-width: 1024px) 1920px, (min-width: 500px) 1024px, 320px"
 						src="./assets/imgs/gallery/portraits/portraits-ade-tunji-mobile.webp" loading="lazy"
-						alt="Portrait photo Ade Tunji" width="100%" height="auto"/>
+						alt="Portrait photo Ade Tunji" width="auto" height="auto"/>
 					<img data-gallery-tag="Mariages" class="gallery-item" srcset="
 					./assets/imgs/gallery/mariage/mariage-jakob-owens-mobile.webp 500w,
 					./assets/imgs/gallery/mariage/mariage-jakob-owens-tablette.webp 1024w,
 					./assets/imgs/gallery/mariage/mariage-jakob-owens-desktop.webp 1920w
-				" sizes="(min-width: 1024px) 440px, (min-width: 500px) 1024px, 320px"
+				" sizes="(min-width: 1024px) 1920px, (min-width: 500px) 1024px, 320px"
 						src="./assets/imgs/gallery/mariage/mariage-jakob-owens-mobile.webp" loading="lazy"
-						alt="Wedding photo Jakob Owens"  width="100%" height="auto"/>
+						alt="Wedding photo Jakob Owens" width="auto" height="auto"/>
 					<img data-gallery-tag="Portrait" class="gallery-item" srcset="
 					./assets/imgs/gallery/portraits/portraits-nino-van-prattenburg-mobile.webp 500w,
 					./assets/imgs/gallery/portraits/portraits-nino-van-prattenburg-tablette.webp 1024w,
 					./assets/imgs/gallery/portraits/portraits-nino-van-prattenburg-desktop.webp 1920w
-				" sizes="(min-width: 1024px) 440px, (min-width: 500px) 1024px, 320px"
+				" sizes="(min-width: 1024px) 1920px, (min-width: 500px) 1024px, 320px"
 						src="./assets/imgs/gallery/portraits/portraits-nino-van-prattenburg-mobile.webp" loading="lazy"
-						alt="Portrait photo Nino Van Prattenburg"  width="100%" height="auto"/>
+						alt="Portrait photo Nino Van Prattenburg" width="auto" height="auto"/>
 					<img data-gallery-tag="Concert" class="gallery-item" srcset="
 					./assets/imgs/gallery/concerts/concert-austin-neill-mobile.webp 500w,
 					./assets/imgs/gallery/concerts/concert-austin-neill-tablette.webp 1024w,
 					./assets/imgs/gallery/concerts/concert-austin-neill-desktop.webp 1920w
-				" sizes="(min-width: 1024px) 440px, (min-width: 500px) 1024px, 320px"
+				" sizes="(min-width: 1024px) 1920px, (min-width: 500px) 1024px, 320px"
 						src="./assets/imgs/gallery/concerts/concert-austin-neill-mobile.webp" loading="lazy"
-						alt="Concert photo Austin Neill"  width="100%" height="auto"/>
+						alt="Concert photo Austin Neill" width="auto" height="auto"/>
 					<img data-gallery-tag="Entreprises" class="gallery-item" srcset="
 					./assets/imgs/gallery/entreprise/entreprise-mateus-campos-felipe-mobile.webp 500w,
 					./assets/imgs/gallery/entreprise/entreprise-mateus-campos-felipe-tablette.webp 1024w,
 					./assets/imgs/gallery/entreprise/entreprise-mateus-campos-felipe-desktop.webp 1920w
-				" sizes="(min-width: 1024px) 440px, (min-width: 500px) 1024px, 320px"
+				" sizes="(min-width: 1024px) 1920px, (min-width: 500px) 1024px, 320px"
 						src="./assets/imgs/gallery/entreprise/entreprise-mateus-campos-felipe-mobile.webp"
-						loading="lazy" alt="Business photo Mateus Campos Felipe"  width="100%" height="auto"/>
+						loading="lazy" alt="Business photo Mateus Campos Felipe" width="auto" height="auto"/>
 				</div>
 			</div>
 			<div class="quote">
@@ -312,7 +312,7 @@
 					./assets/imgs/camera-tablette.webp 1024w,
 					./assets/imgs/camera-desktop.webp 1920w
 				" sizes="(min-width: 1024px) 1920px, (min-width: 500px) 1024px, 500px" src="./assets/imgs/camera-mobile.webp"
-						loading="lazy" alt="picture of a camera" width="320px" height="100%"/>
+						loading="lazy" alt="picture of a camera" min-width="320px" height="auto"/>
 				</div>
 			</div>
 		</section>
