Mise à jour de la section "about" avec un attribut "knowsabout" pour le photographe professionnel

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             "name": "Nina Carducci",
             "url": "https://ninacarducci.github.io/",
             "image": "https://ninacarducci.github.io/assets/images/nina.png",
-            "jobTitle": "Photographe professionnel",
+            "knowsabout": "Photographe professionnel",
 			"priceRange": "50 € - 400 €",
             "telephone": "+33 5 56 67 78 89",
             "address": {
@@ -60,11 +60,7 @@
             "sameAs": [
                 "https://www.instagram.com/ninacarducci.photo"
             ],
-            "worksFor": {
-                "@type": "Organization",
-                "name": "Nina Carducci Photography",
-                "url": "https://ninacarducci.github.io/"
-            },
+            "brand": "Nina Carducci Photography",
             "description": "Photographe professionnel basée à Bordeaux, France. Avec créativité et technique, je saisis des moments uniques, des émotions et des situations pour les rendre immortels. Explorez mes photographies pour trouver de l'amour, du bonheur et de la tendresse à chaque regard. Contactez-moi pour des services de photographie professionnelle à Bordeaux et ses environs."
         }
     </script>
